Flesh out API docs
